--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,12 @@ prebuildit:
 
 buildit:
   stage: build
+  needs:
+    - job: prebuildit
+    - project: $UPSTREAM_PROJECT
+      ref: $UPSTREAM_REF
+      job: $UPSTREAM_JOB
+      artifacts: true
   script:
     - echo $UPSTREAM_PROJECT
     - echo $UPSTREAM_REF
