--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,9 @@ stages:
   - prebuild
   - build
 
+variables:
+  TEST_VAR: "All jobs can use this variable's value"
+
 prebuildit:
   stage: prebuild
   script:
@@ -27,11 +30,11 @@ prebuildit:
 
 buildit:
   stage: build
-  # needs:
-  #   - project: $UPSTREAM_PROJECT
-  #     ref: $UPSTREAM_REF
-  #     job: $UPSTREAM_JOB
-  #     artifacts: true
+  needs:
+    - project: $UPSTREAM_PROJECT
+      job: $UPSTREAM_JOB
+      ref: $UPSTREAM_REF
+      artifacts: true
   script:
     - echo $UPSTREAM_PROJECT
     - echo $UPSTREAM_REF
