--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,8 @@ stages:
   - build
 
 variables:
-  TEST_VAR: "All jobs can use this variable's value"
+  DEPENDENCY_JOB_NAME: "prebuildit"
+  ARTIFACTS_DOWNLOAD_REF: $CI_COMMIT_BRANCH
 
 prebuildit:
   stage: prebuild
@@ -31,11 +32,13 @@ prebuildit:
 buildit:
   stage: build
   needs:
-    - project: $UPSTREAM_PROJECT
-      job: $UPSTREAM_JOB
-      ref: $UPSTREAM_REF
+    - project: $CI_PROJECT_PATH
+      job: $DEPENDENCY_JOB_NAME
+      ref: $ARTIFACTS_DOWNLOAD_REF
       artifacts: true
   script:
+    - echo $DEPENDENCY_JOB_NAME
+    - echo $ARTIFACTS_DOWNLOAD_REF
     - echo $UPSTREAM_PROJECT
     - echo $UPSTREAM_REF
     - echo $UPSTREAM_JOB
