--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,8 +33,8 @@ buildit:
   stage: build
   needs:
     - project: $CI_PROJECT_PATH
-      job: $DEPENDENCY_JOB_NAME
-      ref: $ARTIFACTS_DOWNLOAD_REF
+      job: prebuildit
+      ref: master
       artifacts: true
   script:
     - echo $DEPENDENCY_JOB_NAME
