Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ default:
 stages:
   - prebuild
   - build
+  - trigger
 
 variables:
   DEPENDENCY_JOB_NAME: "prebuildit"
@@ -47,6 +48,11 @@ buildit:
     paths:
       - ./*.export
       - prebuildit.env
+  
+trigger-job: 
+  stage: trigger
+  script:
+    - echo "trigger downstream pipeline"
   trigger:
     include:
       - local: gitlab-gold/ryan-test-subgroup/label-test/test-dir/.gitlab-ci.yml
