--- a/downstream/test.yml
+++ b/downstream/test.yml
@@ -6,13 +6,11 @@ stages:
 
 Job-1:
   stage: test
-  script:
-    - echo "hello world"
-  # needs:
-  #   - project: $UPSTREAM_PROJECT
-  #     ref: $UPSTREAM_REF
-  #     job: $UPSTREAM_JOB
-  #     artifacts: true
-  # script: 
-  #     - echo $UPSTREAM_JOB
-  #     - echo $UPSTREAM_PROJECT
+  needs:
+    - project: $UPSTREAM_PROJECT
+      ref: $UPSTREAM_REF
+      job: $UPSTREAM_JOB
+      artifacts: true
+  script: 
+      - echo $UPSTREAM_JOB
+      - echo $UPSTREAM_PROJECT
