--- a/downstream/test.yml
+++ b/downstream/test.yml
@@ -6,14 +6,16 @@ stages:
 
 Job-1:
   stage: test
-  needs:
-    - project: $CI_PROJECT_PATH
-      ref: $ARTIFACTS_DOWNLOAD_REF
-      job: $DEPENDENCY_JOB_NAME
-      artifacts: true
-  script: 
-      - echo $UPSTREAM_JOB
-      - echo $UPSTREAM_PROJECT
-      - echo $DEPENDENCY_JOB_NAME
-      - echo $ARTIFACTS_DOWNLOAD_REF
-      - echo $CI_PROJECT_PATH
+  script:
+    - echo "did this run?"
+  # needs:
+  #   - project: $CI_PROJECT_PATH
+  #     ref: $ARTIFACTS_DOWNLOAD_REF
+  #     job: $DEPENDENCY_JOB_NAME
+  #     artifacts: true
+  # script: 
+  #     - echo $UPSTREAM_JOB
+  #     - echo $UPSTREAM_PROJECT
+  #     - echo $DEPENDENCY_JOB_NAME
+  #     - echo $ARTIFACTS_DOWNLOAD_REF
+  #     - echo $CI_PROJECT_PATH
