Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ trigger-job:
   trigger:
     include: downstream/test.yml
   only:
-    - changes:
+    changes:
       -  test-dir/*
 
   # needs:
