--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ trigger-job:
   trigger:
     include: downstream/test.yml
   rules:
-    - if: 'CI_MERGE_REQUEST_SOURCE_BRANCH_NAME'
+    - if: '$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME'
       when: never
     - changes:
       -  test-dir/*
