--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,11 +58,11 @@ trigger-job:
   stage: trigger
   trigger:
     include: downstream/test.yml
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-      when: never
-    - changes:
-      -  test-dir/*
+  # rules:
+  #   - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+  #     when: never
+  #   - changes:
+  #     -  test-dir/*
 
   # needs:
   #   - job: prebuildit
